force-app/main/default/objects/CBK_SCH_PendingProcess__c/CBK_SCH_PendingProcess__c.object-meta.xml
<CustomObject>
    <label>CBK SCH PendingProcess</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Schedule Pendig Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CBK SCH PendingProcess</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>