force-app/main/default/objects/CBK_SCH_PendingProcess__c/fields/CBK_ParamTextArea__c.field-meta.xml
<CustomField>
    <fullName>CBK_ParamTextArea__c</fullName>
    <description>Parámetro que permite indicar gran cantidad de texto</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ParamTextArea</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>