force-app/main/default/objects/CBK_SCH_PendingProcess__c/fields/Param1__c.field-meta.xml
<CustomField>
    <fullName>Param1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Param1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>