force-app/main/default/objects/CBK_SCH_PendingProcess__c/fields/Param2__c.field-meta.xml
<CustomField>
    <fullName>Param2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Param2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>