force-app/main/default/objects/CBK_SCH_PendingProcess__c/fields/Queued__c.field-meta.xml
<CustomField>
    <fullName>Queued__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Queued</label>
    <type>Checkbox</type>
</CustomField>