force-app/main/default/objects/CBK_SCH_PendingProcess__c/fields/QueuedDate__c.field-meta.xml
<CustomField>
    <fullName>QueuedDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QueuedDate</label>
    <type>DateTime</type>
</CustomField>