force-app/main/default/objects/CBK_SCH_PendingProcess__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RecordId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>