force-app/main/default/objects/CBK_SCH_PendingProcess__c/fields/Schedule_Time__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Schedule Time</label>
    <type>DateTime</type>
</CustomField>