force-app/main/default/objects/CBK_SCH_PendingProcess__c/fields/UsuarioContexto__c.field-meta.xml
<CustomField>
    <fullName>UsuarioContexto__c</fullName>
    <label>Usuario de contexto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSBD</fullName>
                <label>Now in Sales</label>
            </value>
            <value>
                <fullName>CC</fullName>
                <label>Now in Contact</label>
            </value>
            <value>
                <fullName>AV</fullName>
                <label>Mis Clientes</label>
            </value>
            <value>
                <fullName>EV</fullName>
                <label>Eventos</label>
            </value>
            <value>
                <fullName>CIBE</fullName>
            </value>
            <value>
                <fullName>MCSOL</fullName>
                <label>MC Solutions</label>
            </value>
            <value>
                <fullName>SEG</fullName>
                <label>Segmentos</label>
            </value>
            <value>
                <fullName>SACH</fullName>
            </value>
            <value>
                <fullName>CAM</fullName>
            </value>
            <value>
                <fullName>OS</fullName>
                <label>COPS</label>
            </value>
            <value>
                <fullName>OT</fullName>
                <label>Oficina Técnica</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>